RESOLVED FIXED211533
REGRESSION (r260684): Reader background is lost after multitasking
https://bugs.webkit.org/show_bug.cgi?id=211533
Summary REGRESSION (r260684): Reader background is lost after multitasking
Chris Dumez
Reported 2020-05-06 14:34:06 PDT
Reader background is lost after multitasking.
Attachments
Patch (9.82 KB, patch)
2020-05-06 14:36 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-05-06 14:35:20 PDT
Chris Dumez
Comment 2 2020-05-06 14:36:23 PDT
EWS
Comment 3 2020-05-06 15:05:57 PDT
Committed r261252: <https://trac.webkit.org/changeset/261252> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398659 [details].
Chris Dumez
Comment 4 2020-05-07 19:14:40 PDT
Reverted r261252 for reason: Reland r260684 now that a proper fix has landed in Reader Committed r261364: <https://trac.webkit.org/changeset/261364>
Note You need to log in before you can comment on or make changes to this bug.